	#Rectangle
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
	#Rotate
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
	#Scale
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
	#Script
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
	#SkewX
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
	#SkewY
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
	#TargetArea
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
	#Text
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
	#TextBox
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
	#Tgml Class
		+	06/05/2017 added to GitHub
		%	06/06/2017 changed check_file_contents() to validate_file()
		%	06/06/2017 validate_file() now takes in optional parameters extension_check and tag_check to define what type of validation should be done
		+	06/06/2017 static property SUPPORTED_CHILDREN tuple that declares all the child tag types that are supported by a Tgml element
		+	06/06/2017 validate_element(), which is similar to validate_file() but for a Tgml element instead of a file
		+	06/06/2017 class and file name change TGML => Tgml
		%	06/07/2017 read_tgml_file(), on failure, no long returns etree Tgml element. Instead it's now set to self.element
		%	06/07/2017 fixed __init__() read_tgml_file() mehtod does not exist
		%	06/07/2017 __init__() has more options for object creation
		+	06/08/2017 added exposed_properties attribute as a dictionary for all exposed properties
		%	06/09/2017 fix_scripts() no longer with wrap scripts that already have been fixed
	#Translate
		+	06/07/2017 class added
		%	06/09/2017 __init__() changed for proper inheritance
	#GitHub Collaborators
		+	06/05/2017 added Donkey545