@@ -128,6 +128,8 @@ Version 0.1 Initial release
 		%	06/07/2017 __init__() has more options for object creation
 		+	06/08/2017 added exposed_properties attribute as a dictionary for all exposed properties
 		%	06/09/2017 fix_scripts() no longer with wrap scripts that already have been fixed
+		%	06/19/2017 fixed set_properties() and set_exposed_properties() in how properties are actually set
+		%	06/19/2017 added functions to happen when compile() is called
 	#Translate
 		+	06/07/2017 class added
 		%	06/09/2017 __init__() changed for proper inheritance
